# channels_v_task

./: LU_decomposition_multicore_task.ml  README.md  binarytree5_multicore.ml  binarytree5_multicore_task.ml  dune  eventlog.20924.json  eventlog_gol_chan_12.json  eventlog_gol_chan_12_modified.json  eventlog_gol_chan_24_modified.json  eventlog_gol_chan_4.json  eventlog_gol_chan_8.json  eventlog_gol_chan_8_modified.json  eventlog_gol_task_12.json  eventlog_gol_task_12_modified.json  eventlog_gol_task_24_modified.json  eventlog_gol_task_4.json  eventlog_gol_task_8.json  eventlog_gol_task_8_modified.json  floyd_warshall_multicore_chan.ml  floyd_warshall_multicore_task.ml  game_of_life_multicore.ml  mandelbrot6_multicore.ml  matrix_multiplication_multicore_task.ml  nbody_multicore.ml  nbody_multicore_task.ml  spectralnorm2_multicore.ml  time_on_godel.txt  time_on_godel_LU.txt  time_on_godel_binarytree5._chantxt  time_on_godel_binarytree5_chan.txt  time_on_godel_binarytree5_task.txt  time_on_godel_binarytree5_task_parallel_for.txt  time_on_godel_floyd_warshall_chan.txt  time_on_godel_floyd_warshall_task.txt  time_on_godel_gol_modified.txt  time_on_godel_mandelbrot_multicore.txt  time_on_godel_nbody_multicore_chan.txt  time_on_godel_nbody_multicore_task.txt  time_on_godel_quicksort_chan.txt  time_on_godel_quicksort_multicore_task.txt  (+1 more)
_build/: .db  .digest-db  log
_build/default/: .merlin
_build/default/.matrix_multiplication_multicore.eobjs/: matrix_multiplication_multicore.ml.d
_build/default/.matrix_multiplication_multicore.eobjs/byte/: matrix_multiplication_multicore.cmi  matrix_multiplication_multicore.cmo  matrix_multiplication_multicore.cmt
_build/default/.matrix_multiplication_multicore.eobjs/native/: matrix_multiplication_multicore.cmx
_build/default/.matrix_multiplication_multicore_task.eobjs/: matrix_multiplication_multicore_task.ml.d
_build/default/.matrix_multiplication_multicore_task.eobjs/byte/: matrix_multiplication_multicore_task.cmi  matrix_multiplication_multicore_task.cmo  matrix_multiplication_multicore_task.cmt
_build/default/.matrix_multiplication_multicore_task.eobjs/native/: matrix_multiplication_multicore_task.cmx
_build/default/.matrix_multiplication_tiling_multicore.eobjs/: matrix_multiplication_tiling_multicore.ml.d
_build/default/.matrix_multiplication_tiling_multicore.eobjs/byte/: matrix_multiplication_tiling_multicore.cmi  matrix_multiplication_tiling_multicore.cmo  matrix_multiplication_tiling_multicore.cmt
_build/default/.matrix_multiplication_tiling_multicore.eobjs/native/: matrix_multiplication_tiling_multicore.cmx
_build/default/.mergesort_multicore.eobjs/: mergesort_multicore.ml.d
_build/default/.mergesort_multicore.eobjs/byte/: mergesort_multicore.cmi  mergesort_multicore.cmo  mergesort_multicore.cmt
_build/default/.mergesort_multicore.eobjs/native/: mergesort_multicore.cmx
_build/default/.mergesort_multicore_task.eobjs/: mergesort_multicore_task.ml.d
_build/default/.mergesort_multicore_task.eobjs/byte/: mergesort_multicore_task.cmi  mergesort_multicore_task.cmo  mergesort_multicore_task.cmt
_build/default/.mergesort_multicore_task.eobjs/native/: mergesort_multicore_task.cmx
multicore-grammatrix/: dune  grammatrix_multicore_atul.ml  kc.txt
