(executable
	(name matrix_multiplication_multicore)
	(modules matrix_multiplication_multicore)
	(libraries domainslib))
(executable
	(name matrix_multiplication_tiling_multicore)
	(modules matrix_multiplication_tiling_multicore)
	(libraries domainslib))
(executable
	(name matrix_multiplication_multicore_task)
	(modules matrix_multiplication_multicore_task)
	(libraries domainslib))
(executable
	(name mergesort_multicore)
	(modules mergesort_multicore)
	(libraries domainslib))
(executable
	(name mergesort_multicore_task)
	(modules mergesort_multicore_task)
	(libraries domainslib))
(executable
	(name spectralnorm2_multicore)
	(modules spectralnorm2_multicore)
	(libraries domainslib))
(executable
	(name spectralnorm2_multicore_task)
	(modules spectralnorm2_multicore_task)
	(libraries domainslib))
(executable
	(name game_of_life_multicore)
	(modules game_of_life_multicore)
	(libraries domainslib))
(executable
	(name game_of_life_multicore_task)
	(modules game_of_life_multicore_task)
	(libraries domainslib))
