(executable
	(name matrix_multiplication_multicore)
	(modules matrix_multiplication_multicore)
	(libraries domainslib))
(executable
	(name matrix_multiplication_tiling_multicore)
	(modules matrix_multiplication_tiling_multicore)
	(libraries domainslib))
(executable
	(name matrix_multiplication_multicore_task)
	(modules matrix_multiplication_multicore_task)
	(libraries domainslib))
(executable
	(name mergesort_multicore)
	(modules mergesort_multicore)
	(libraries domainslib))
(executable
	(name mergesort_multicore_task)
	(modules mergesort_multicore_task)
	(libraries domainslib))
(executable
	(name spectralnorm2_multicore)
	(modules spectralnorm2_multicore)
	(libraries domainslib))
(executable
	(name spectralnorm2_multicore_task)
	(modules spectralnorm2_multicore_task)
	(libraries domainslib))
(executable
	(name game_of_life_multicore)
	(modules game_of_life_multicore)
	(libraries domainslib))
(executable
	(name game_of_life_multicore_task)
	(modules game_of_life_multicore_task)
	(libraries domainslib))
(executable
	(name binarytree5_multicore)
	(modules binarytree5_multicore)
	(libraries domainslib))
(executable
	(name binarytree5_multicore_task)
	(modules binarytree5_multicore_task)
	(libraries domainslib))
(executable
	(name quicksort_multicore)
	(modules quicksort_multicore)
	(libraries domainslib))
(executable
	(name quicksort_multicore_task)
	(modules quicksort_multicore_task)
	(libraries domainslib))
(executable
	(name nbody_multicore_task)
	(modules nbody_multicore_task)
	(libraries domainslib))
(executable
	(name nbody_multicore)
	(modules nbody_multicore)
	(libraries domainslib))
(executable
	(name mandelbrot6_multicore)
	(modules mandelbrot6_multicore)
	(libraries domainslib))	
(executable
	(name mandelbrot6_multicore_task)
	(modules mandelbrot6_multicore_task)
	(libraries domainslib))
(executable
	(name LU_decomposition_multicore_chan)
	(modules LU_decomposition_multicore_chan)
	(libraries domainslib))
(executable
	(name LU_decomposition_multicore_task)
	(modules LU_decomposition_multicore_task)
	(libraries domainslib))
(executable
	(name floyd_warshall_multicore_task)
	(modules floyd_warshall_multicore_task)
	(libraries domainslib))
(executable
	(name floyd_warshall_multicore_chan)
	(modules floyd_warshall_multicore_chan)
	(libraries domainslib))
