(executable
 (name grammatrix)
 (modules grammatrix)
 (libraries unix utls))
(executable
 (name grammatrix_multicore)
 (modules grammatrix_multicore)
 (libraries unix domainslib utls))
(executable
 (name grammatrix_multicore_atul)
 (modules grammatrix_multicore_atul)
 (libraries unix domainslib utls))